# code_ai

godot/: export_presets.cfg  nut_nho.gd  nut_nho.gd.uid  project.godot  thanh_phan_ds.gd  thanh_phan_ds.gd.uid
godot/.godot/: global_script_class_cache.cfg
godot/.godot/editor/: control_thanh_phan.tscn-editstate-00d7315eecda92b43e0eafa76f65f8e5.cfg  control_thanh_phan.tscn-folding-00d7315eecda92b43e0eafa76f65f8e5.cfg  create_recent.Node  create_recent.Resource  dang_nhap.tscn-folding-96d72d2ad055f94acc6ca34eb61ef651.cfg  danh_sach.tscn-editstate-8672c6913cbe46d42810420dd76f2576.cfg  danh_sach.tscn-folding-8672c6913cbe46d42810420dd76f2576.cfg  editor_layout.cfg  editor_script_doc_cache.res  export-2b7cb306e782af078e32c10528a16b3d-button1.res-folding-bd5b120f4880ededc906fb7a2ae9c6b7.cfg  favorite_properties  filesystem_cache10  filesystem_update4  main.tscn-editstate-260cc004f075ccf9c4915538491c9289.cfg  main.tscn-editstate-3070c538c03ee49b7677ff960a3f5195.cfg  main.tscn-folding-260cc004f075ccf9c4915538491c9289.cfg  (+22 more)
godot/gd/: danh_sach.gd  danh_sach.gd.uid  main.gd  main.gd.uid  node_2d.gd  node_2d.gd.uid  py.gd  py.gd.uid  thanh_phan_kh.gd  thanh_phan_kh.gd.uid  trinh_phat_video.gd  trinh_phat_video.gd.uid  viet_code.gd  viet_code.gd.uid
godot/scene/: dang_nhap.tscn  danh_sach.tscn  danh_sach.tscn3345298730.tmp  main_code.tscn  menu.tscn  nut_nho.tscn  thanh_phan_ds.tscn  thanh_phan_kh.tscn  trinh_phat_video.tscn
rust/: Cargo.toml
rust/src/: chatbot.rs  compile_py.rs  lib.rs  main_node.rs  pythonrun.rs  test.rs  thanh_menu.rs  viet_code.rs
rust/src/data/: db.rs
(+76 files in other folders)
